# COBA

./: .travis.yml  package-lock.json  package.json  plugin.sln
extension/: bootstrap.js  chrome.manifest  install.rdf
extension/chrome/content/: PrivateBrowsingWarning.xhtml  common.js  container.js  container.xhtml  cookieObserver.js  httpObserver.js  overlay.js  overlay.xul  (+2 more)
extension/components/: nsWatchFactory.js
extension/modules/: cobaUtils.jsm  logger.jsm
extension/webextension/: background.js  manifest.json
native_messaging/host/: Cargo.toml
native_messaging/host/oleaut32-sys/: Cargo.toml  oleaut32-sys.patch
native_messaging/host/oleaut32-sys/src/: lib.rs
native_messaging/host/src/: iwebbrowser2.rs  lib.rs
native_messaging/installer/: cobahelper.json  cobahelper.nsi  langstrings.nsh
plugin/: IEControlSite.cpp  IEHostWindow.cpp  IEHostWindow.h  IEModePlugin.vcxproj  IEModePlugin.vcxproj.filters  PluginApp.cpp  PluginApp.h  plugin.rc  resource.h  stdafx.cpp
plugin/BrowserHook/: AtlDepHook.cpp  AtlDepHook.h  HookImportFunction.cpp  HookImportFunction.h  HookMgr.cpp  HookMgr.h  WindowMessageHook.cpp  WindowMessageHook.h
plugin/Cookie/: CookieManager.cpp  CookieManager.h
plugin/HttpMonitor/: HttpMonitorApp.h  MonitorSink.cpp  MonitorSink.h
plugin/Plugin/: PluginGlobal.cpp  ScriptablePluginObject.cpp  ScriptablePluginObject.h  ScriptablePluginObjectBase.cpp  plugin.cpp  plugin.h  pluginbase.h
plugin/Utils/: App.h  OS.cpp  OS.h
plugin/np/: npp_gate.cpp
webextension/: background.js  manifest.json
webextension/page/: coba.html  coba.js
(+11 files in other folders)
