[package]
name = "ielauncher"
version = "0.5.0"
authors = ["Hector Zhao <bzhao@mozilla.com>"]

[dependencies]
advapi32-sys = "0.2.0"
byteorder = "1.0.0"
ole32-sys = "0.2.0"
oleaut32-sys = "0.2.0"
serde = "1.0.5"
serde_derive = "1.0.5"
serde_json = "1.0.2"
winapi = "0.2.8"

[replace]
"oleaut32-sys:0.2.0" = { path = "oleaut32-sys" }
