[package]
name = "ielauncher"
version = "0.6.0"
authors = ["Hector Zhao <bzhao@mozilla.com>"]

[dependencies]
byteorder = "1.2.3"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"

[dependencies.winapi]
version = "0.3.5"
features = ["combaseapi", "exdisp", "oaidl", "objbase", "oleauto", "minwindef", "winerror", "winnt", "winreg", "wtypes"]

[patch.crates-io]
winapi = { git = "https://github.com/retep998/winapi-rs", rev = "13e68385c568" }
