[package]
name = "oleaut32-sys"
version = "0.2.0"
authors = ["Peter Atashian <retep998@gmail.com>"]
description = "Contains function definitions for the Windows API library oleaut32. See winapi for types and constants."
documentation = "https://retep998.github.io/doc/oleaut32/"
repository = "https://github.com/retep998/winapi-rs"
readme = "README.md"
keywords = ["windows", "ffi", "win32"]
license = "MIT"
build = "build.rs"
[lib]
name = "oleaut32"
[dependencies]
winapi = "0.2.8"
[build-dependencies]
winapi-build = "0.1.1"
